@@ -445,6 +445,9 @@ Release 2.0.5-beta - UNRELEASED
     HDFS-4615. Fix TestDFSShell failures on Windows.  (Arpit Agarwal
     via szetszwo)
 
+    HDFS-4584. Skip TestNNWithQJM.testNewNamenodeTakesOverWriter() on Windows.
+    (Arpit Agarwal via szetszwo)
+
 Release 2.0.4-alpha - UNRELEASED
 
   INCOMPATIBLE CHANGES
